--- a/index.html
+++ b/index.html
@@ -48,11 +48,20 @@
       gap:12px;
     }
     .logo{font-weight:700;color:var(--primary);font-size:1.1rem}
-    .links{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+    .links{display:flex;gap:8px;align-items:center;}
     .links a{margin:0 8px;color:var(--text);font-weight:600}
     .links a:hover{color:var(--primary)}
     .theme-toggle{
       background:var(--primary);color:#fff;border:0;padding:8px 12px;border-radius:8px;cursor:pointer;font-weight:700
+    }
+    /* Hamburger Menu Button (New) */
+    .hamburger{
+        display: none; /* Hidden by default */
+        font-size: 1.5rem;
+        background: none;
+        border: none;
+        color: var(--text);
+        cursor: pointer;
     }
 
     /* Hero */
@@ -68,7 +77,7 @@
     section.visible{opacity:1;transform:translateY(0)}
     section h2{text-align:center;font-size:1.6rem;margin-bottom:22px;color:var(--primary)}
     .card{background:var(--card);padding:18px;border-radius:12px;max-width:1000px;margin:16px auto;box-shadow:0 6px 18px rgba(0,0,0,.3)}
-    ul{line-height:1.7}
+    ul{line-height:1.7; padding-left: 20px;}
 
     /* Grids */
     .skills,.projects{display:grid;gap:18px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr))}
@@ -86,8 +95,33 @@
 
     /* Footer & top button */
     footer{background:var(--card);padding:18px;text-align:center;border-top:2px solid var(--primary);color:rgba(255,255,255,.7)}
-    #topBtn{display:none;position:fixed;right:24px;bottom:24px;background:var(--primary);color:#000;border:0;padding:10px 14px;border-radius:999px;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,.35)}
+    #topBtn{display:none;position:fixed;right:24px;bottom:24px;background:var(--primary);color:#000;border:0;padding:10px 14px;border-radius:999px;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,.35); z-index: 100;}
 
+    /* === Responsive Design === */
+    @media(max-width:992px){
+        .hamburger {
+            display: block; /* Show hamburger */
+        }
+        .links {
+            display: none; /* Hide links by default */
+            position: absolute;
+            top: 100%; /* Position below navbar */
+            left: 0;
+            width: 100%;
+            background: var(--card);
+            flex-direction: column;
+            padding: 15px;
+            box-shadow: 0 8px 16px rgba(0,0,0,.3);
+        }
+        .links.active {
+            display: flex; /* Show links when menu is open */
+        }
+        .links a {
+            margin: 10px 0;
+            text-align: center;
+        }
+    }
+    
     @media(max-width:720px){
       .hero h1{font-size:2rem}
       .board{grid-template-columns:repeat(3,74px)}
@@ -98,10 +132,9 @@
 <body>
   <canvas id="particles"></canvas>
 
-  <!-- NAV -->
   <nav>
     <div class="logo">Abdulla Syed</div>
-    <div class="links">
+    <div class="links" id="navLinks">
       <a href="#about">About</a>
       <a href="#education">Education</a>
       <a href="#skills">Skills</a>
@@ -112,10 +145,11 @@
       <a href="#game">Fun Zone 🎮</a>
       <a href="#contact">Contact</a>
     </div>
-    <button class="theme-toggle" id="themeToggle">🌙</button>
+    <div style="display: flex; align-items: center; gap: 10px;">
+        <button class="theme-toggle" id="themeToggle">🌙</button>
+        <button class="hamburger" id="hamburger">☰</button> </div>
   </nav>
 
-  <!-- HERO -->
   <section class="hero" id="home">
     <h1>Hi, I'm Abdulla 👋</h1>
     <p><span class="typed-text"></span></p>
@@ -128,7 +162,6 @@
     </div>
   </section>
 
-  <!-- ABOUT -->
   <section id="about">
     <h2>About Me</h2>
     <div class="card">
@@ -136,7 +169,6 @@
     </div>
   </section>
 
-  <!-- EDUCATION -->
   <section id="education">
     <h2>Education</h2>
     <div class="card">
@@ -145,7 +177,6 @@
     </div>
   </section>
 
-  <!-- SKILLS -->
   <section id="skills">
     <h2>Skills</h2>
     <div class="skills">
@@ -157,7 +188,6 @@
     </div>
   </section>
 
-  <!-- PROJECTS -->
   <section id="projects">
     <h2>Projects</h2>
     <div class="projects">
@@ -168,7 +198,6 @@
     </div>
   </section>
 
-  <!-- EXPERIENCE -->
   <section id="experience">
     <h2>Academic Experience</h2>
     <div class="card">
@@ -176,7 +205,6 @@
     </div>
   </section>
 
-  <!-- ACHIEVEMENTS -->
   <section id="achievements">
     <h2>Achievements</h2>
     <div class="card">
@@ -187,7 +215,6 @@
     </div>
   </section>
 
-  <!-- EXTRACURRICULARS -->
   <section id="extracurriculars">
     <h2>Extracurriculars</h2>
     <div class="card">
@@ -199,7 +226,6 @@
     </div>
   </section>
 
-  <!-- FUN ZONE -->
   <section id="game">
     <h2>🎮 Tic Tac Toe</h2>
     <div id="ticTacToe" class="card">
@@ -219,7 +245,6 @@
     </div>
   </section>
 
-  <!-- CONTACT -->
   <section id="contact">
     <h2>Contact</h2>
     <div class="card">
@@ -233,6 +258,19 @@
 
 <script>
 (function(){
+  // --- Hamburger Menu Logic (New) ---
+  const hamburger = document.getElementById('hamburger');
+  const navLinks = document.getElementById('navLinks');
+  hamburger.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+  });
+  // Close menu when a link is clicked
+  navLinks.querySelectorAll('a').forEach(link => {
+    link.addEventListener('click', () => {
+      navLinks.classList.remove('active');
+    });
+  });
+
   // Typing effect
   const textArray=["Engineering Student","Developer","Tech Enthusiast"];
   let t=0,c=0;const typed=document.querySelector(".typed-text");
@@ -260,8 +298,20 @@
 
   // Theme toggle
   const toggle=document.getElementById("themeToggle");
-  if(localStorage.getItem("theme")==="light")document.body.classList.add("light");
-  toggle.onclick=()=>{document.body.classList.toggle("light");localStorage.setItem("theme",document.body.classList.contains("light")?"light":"dark");toggle.textContent=document.body.classList.contains("light")?"☀️":"🌙";};
+  const prefersLight = window.matchMedia('(prefers-color-scheme: light)').matches;
+  let currentTheme = localStorage.getItem("theme");
+  
+  // Set initial theme based on storage or system preference
+  if (currentTheme === "light" || (!currentTheme && prefersLight)) {
+    document.body.classList.add("light");
+  }
+  
+  toggle.onclick=()=>{
+      document.body.classList.toggle("light");
+      localStorage.setItem("theme",document.body.classList.contains("light")?"light":"dark");
+      toggle.textContent=document.body.classList.contains("light")?"☀️":"🌙";
+  };
+  // Set initial button icon
   toggle.textContent=document.body.classList.contains("light")?"☀️":"🌙";
 
   // Particles
